--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,22 @@
     <title>Document</title>
   </head>
   <body>
+    <button onClick="tap()">双击</button>
     <script src="/dist/umd/vue.js"></script>
     <script>
       let vm = new Vue({
         el: "#app",
         data() {
           return {
-            name: [{ a: 1 }, { b: 2 }],
+            name: [{ a: 1 }, { b: 2 }]
           };
-        },
+        }
       });
-      console.log(vm._data);
+      console.log(vm._data.name);
+      function tap() {
+        vm._data.name.push([10]);
+        vm._data.name[2][0] = 100;
+      }
     </script>
   </body>
 </html>
