增加proxy代理数据

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,15 @@
             name: "lqm",
             age: 23,
             className: "helloworld",
+            arr: [1],
           };
         },
       });
       function aa() {
-        vm.$data.className = "hello";
-        console.log(vm.$data);
+        console.log(vm, "vm");
+        console.log(vm.name, "name");
+        // debugger;
+        vm.arr.push(2);
       }
     </script>
   </body>
