--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,11 @@
   </head>
   <body>
     <div id="app">
-      <p v-bind:class="className">{{name}}</p>
+      <p v-bind:class="className">{{name}} ----> {{name}}</p>
+      <div v-html="html"></div>
       <p v-text="age"></p>
       <span>{{age}}</span><br />
-      <input v-model="model" /><br />
+      <input v-model="flag" /><br />
       <button v-on:click="aa">change:v-on</button>
       <button @click="aa">change@</button>
     </div>
@@ -28,13 +29,15 @@
             name: "lqm",
             age: 23,
             className: "helloworld",
-            model: "model"
+            flag: "model",
+            html: "<p1>hello</p1>",
+            person: { b: 2 }
           };
         },
         methods: {
           aa() {
             console.log(123456);
-            vm.$data.name = "hello";
+            vm.$data.html = "<p1>world</p1>";
           }
         }
       });
