--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
       <div>{{ arr[1] }}</div>
     </div> -->
     <div id="app" style="color: red; font-size: 20px">
-      你好，{{ name }}
+      你好，{{ name }} 欢迎
       <span style="color: blue">{{ age }} </span>
-      <p style="color: blue">{{ age }}</p>
+      <p>学习源码</p>
     </div>
     <script src="/dist/umd/vue.js"></script>
     <script>
